--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,5 +1,5 @@
 erlang_version=19.0.2
 elixir_version=1.3.3
-always_rebuild=true
+always_rebuild=false
 config_vars_to_export=(DATABASE_URL)
 runtime_path=/app
