--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
   },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "vue": "^2.3.3"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "brunch": "2.7.4",
     "clean-css-brunch": "~2.0.0",
     "css-brunch": "~2.0.0",
+    "handlebars-brunch": "^2.0.1",
     "javascript-brunch": "~2.0.0",
-    "uglify-js-brunch": "~2.0.1",
+    "node-sass": "^4.5.3",
     "sass-brunch": "^2.0.0",
-    "handlebars-brunch": "^2.0.1"
+    "uglify-js-brunch": "~2.0.1",
+    "vue-brunch": "^2.0.1"
   }
 }
